cart icon btn on mobile - ui fixes

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,7 @@
     }
 }
 
+.cart-img-active {
+    opacity: 1 !important;
+}
+
